--- a/SITIO WEB_ESP32/html/vista/ev_equipos.html
+++ b/SITIO WEB_ESP32/html/vista/ev_equipos.html
@@ -5,36 +5,72 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Evaluación de Equipos</title>
   <style>
-    /* Estilos generales */
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to right, #1e3c72, #2a5298);
-      color: white;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-      overflow-x: hidden;
-    }
-    header {
-      background: rgba(0, 0, 0, 0.8);
-      padding: 20px;
-      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-      animation: fadeInDown 1s;
-    }
-    h1 {
-      margin: 0;
-      font-size: 2.5rem;
-      letter-spacing: 2px;
-    }
-
-    /* Animaciones */
-    @keyframes fadeInDown {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+   body {
+            font-family: 'Poppins', sans-serif;
+            font-size: 18px;
+            background: linear-gradient(to right, #fbfbfb, #fbfbfb);
+            color: rgb(21, 139, 230);
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            overflow-x: hidden;
+        }
+        header {
+            background: linear-gradient(rgba(6, 83, 207, 0.8), rgba(27, 100, 219, 0.8)),
+                        url('https://i.pinimg.com/736x/93/b7/13/93b7130c24ef54a2d04958536c9498b0.jpg');
+            color: white;
+            background-size: cover;
+            background-position: center;
+            padding: 15px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+        }
+        h1 {
+            font-size: 2.5rem;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+        h2 {
+            font-size: 2rem;
+            font-weight: bold;
+            color: #e6b800;
+        }
+        p {
+            font-size: 1.2rem;
+            line-height: 1.6;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+        }
+        nav ul li {
+            display: inline;
+        }
+        nav ul li a {
+            background-color: #e6b800;
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            padding: 10px 20px;
+            border-radius: 5px;
+            display: inline-block;
+            transition: background 0.3s;
+        }
+        nav ul li a:hover {
+            background-color: rgba(6, 83, 207, 0.8);
+        }
+        main {
+            padding: 30px;
+            animation: fadeIn 1.5s;
+        }
 
     /* Estilos del contenedor de los apartados */
     #apartados-container {
+      background: rgba(6, 83, 207, 0.8);
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -42,7 +78,10 @@
       margin: 10px auto;
       width: 90%;
       border-radius: 10px;
-      background-color: rgba(0, 0, 0, 0.5);
+      background-color: #234a6c;
+      text-align: center;
+      transition: transform 0.3s ease-in-out;
+      color: white;
     }
 
     #apartados {
@@ -52,7 +91,7 @@
 
     .apartado {
       padding: 15px;
-      background: white;
+      background:  rgba(6, 83, 207, 0.8);
       border-radius: 10px;
       text-align: center;
       width: 180px;
@@ -66,7 +105,7 @@
 
     /* Estilos de los botones de calificación */
     .apartado button {
-      background-color: #333;
+      background-color: #333333;
       color: white;
       border: none;
       padding: 10px;
@@ -77,7 +116,7 @@
     }
 
     .apartado button:hover {
-      background-color: #ffcc00;
+      background-color: #0673D0;
     }
 
     /* Estilo para el botón "Guardar" */
@@ -92,27 +131,23 @@
     }
 
     .send_btn:hover {
-      background-color: #e6b800;
+      background-color: rgba(6, 83, 207, 0.8);
     }
     footer {
-            background: rgba(0, 0, 0, 0.8);
+            background: linear-gradient(rgba(6, 83, 207, 0.8), rgba(27, 100, 219, 0.8)),
+                        url('https://i.pinimg.com/736x/93/b7/13/93b7130c24ef54a2d04958536c9498b0.jpg');
+            color: white;
+            background-size: cover;
+            background-position: center;
             padding: 10px;
             position: fixed;
             width: 100%;
             bottom: 0;
-            animation: fadeInUp 1s;
+            text-align: center;
         }
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
-        }
-        @keyframes fadeInDown {
-            from { opacity: 0; transform: translateY(-20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
         }
   </style>
 </head>
