--- a/SITIO WEB_ESP32/html/vista/ver_equipo.html
+++ b/SITIO WEB_ESP32/html/vista/ver_equipo.html
@@ -8,111 +8,127 @@
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(to right, #1e3c72, #2a5298);
-            color: white;
+            font-size: 18px;
+            background: linear-gradient(to right, #fbfbfb, #fbfbfb);
+            color: rgb(21, 139, 230);
             margin: 0;
             padding: 0;
             text-align: center;
             overflow-x: hidden;
         }
         header {
-            background: rgba(0, 0, 0, 0.8);
-            padding: 20px;
+            background: linear-gradient(rgba(6, 83, 207, 0.8), rgba(27, 100, 219, 0.8)),
+                        url('https://i.pinimg.com/736x/93/b7/13/93b7130c24ef54a2d04958536c9498b0.jpg');
+            color: white;
+            background-size: cover;
+            background-position: center;
+            padding: 15px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-            animation: fadeInDown 1s;
         }
         h1 {
-            margin: 0;
             font-size: 2.5rem;
+            font-weight: bold;
+            text-transform: uppercase;
             letter-spacing: 2px;
+        }
+        h2 {
+            font-size: 2rem;
+            font-weight: bold;
+            color: #e6b800;
+        }
+        p {
+            font-size: 1.2rem;
+            line-height: 1.6;
         }
         nav ul {
             list-style: none;
             padding: 0;
+            display: flex;
+            justify-content: center;
+            gap: 15px;
         }
         nav ul li {
             display: inline;
-            margin: 0 15px;
         }
         nav ul li a {
+            background-color: #e6b800;
             color: white;
             text-decoration: none;
             font-weight: bold;
-            transition: color 0.3s ease-in-out;
+            padding: 10px 20px;
+            border-radius: 5px;
+            display: inline-block;
+            transition: background 0.3s;
         }
         nav ul li a:hover {
-            color: #ffcc00;
+            background-color: #0673D0;
         }
         main {
-            padding: 50px;
+            padding: 30px;
             animation: fadeIn 1.5s;
+        }
+        .intro-box {
+            background-color: #b3d9ff; /* Azul claro */
+            padding: 20px;
+            border-radius: 10px;
+            max-width: 80%;
+            margin: auto;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .intro-box p {
+            text-align: justify;
+            margin: 0;
+            color: #004080; /* Azul más oscuro para mejor lectura */
         }
         .container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             gap: 20px;
+            margin-top: 20px;
         }
         .card {
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(6, 83, 207, 0.8);
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
             width: 300px;
             text-align: center;
             transition: transform 0.3s ease-in-out;
-            margin: 10px;
+            color: white;
+            font-size: 1.2rem;
         }
         .card:hover {
             transform: scale(1.05);
         }
         button {
-            background-color: #ffcc00;
+            background-color: #e6b800;
             border: none;
             padding: 10px 20px;
             cursor: pointer;
-            font-size: 1rem;
+            font-size: 1.2rem;
             border-radius: 5px;
+            color: white;
             transition: background 0.3s;
         }
         button:hover {
-            background-color: #e6b800;
-        }
-        img {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
-            margin-top: 15px; /* Espaciado entre la descripción y la imagen */
+            background-color: #0673D0;
         }
         footer {
-            background: rgba(0, 0, 0, 0.8);
+            background: linear-gradient(rgba(6, 83, 207, 0.8), rgba(27, 100, 219, 0.8)),
+                        url('https://i.pinimg.com/736x/93/b7/13/93b7130c24ef54a2d04958536c9498b0.jpg');
+            color: white;
+            background-size: cover;
+            background-position: center;
             padding: 10px;
             position: fixed;
             width: 100%;
             bottom: 0;
-            animation: fadeInUp 1s;
+            text-align: center;
         }
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
-        }
-        @keyframes fadeInDown {
-            from { opacity: 0; transform: translateY(-20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        /* Estilos Responsivos */
-        @media (max-width: 768px) {
-            .container {
-                flex-direction: column; /* Cambia la dirección a vertical en pantallas pequeñas */
-                align-items: center;
-            }
-            .card {
-                width: 90%; /* Los cards ocuparán el 90% del ancho en pantallas pequeñas */
-            }
         }
     </style>
 </head>
